--- a/lib/smart_git_web/live/page/page_live.html.heex
+++ b/lib/smart_git_web/live/page/page_live.html.heex
@@ -1,9 +1,49 @@
-<div class="mx-auto flex items-center justify-between py-4 mb-10">
+<div class="max-w-md mx-auto flex items-center justify-between py-4 mb-10">
   <button
     data-role="btn-language-select"
     data-id="elixir"
-    class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full"
+    class="bg-purple-600 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded-full"
   >
     Elixir
   </button>
+
+  <button
+    data-role="btn-language-select"
+    data-id="javascript"
+    class="bg-cyan-700 hover:bg-cyan-800 text-white font-bold py-2 px-4 rounded-full"
+  >
+    Javascript
+  </button>
+
+  <button
+    data-role="btn-language-select"
+    data-id="java"
+    class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 rounded-full"
+  >
+    Java
+  </button>
+
+  <button
+    data-role="btn-language-select"
+    data-id="python"
+    class="bg-gray-700 hover:bg-black text-white font-bold py-2 px-4 rounded-full"
+  >
+    Python
+  </button>
+
+  <button
+    data-role="btn-language-select"
+    data-id="go"
+    class="bg-green-700 hover:bg-green-800 text-white font-bold py-2 px-4 rounded-full"
+  >
+    Go
+  </button>
+</div>
+
+<div id="list-repos" class="bg-white w-full rounded-lg shadow p-4">
+  <ul class="divide-y divide-gray-200" id="allrepos">
+    <%= for i <- 1..10 do %>
+      <%= live_component(RepoDetail, id: "repo-#{i}") %>
+    <% end %>
+  </ul>
 </div>
