--- a/lib/smart_git_web/live/page/page_live.html.heex
+++ b/lib/smart_git_web/live/page/page_live.html.heex
@@ -3,6 +3,8 @@
     data-role="btn-language-select"
     data-id="elixir"
     class="bg-purple-600 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded-full"
+    phx-click="select-language"
+    phx-value-language="elixir"
   >
     Elixir
   </button>
@@ -11,6 +13,8 @@
     data-role="btn-language-select"
     data-id="javascript"
     class="bg-cyan-700 hover:bg-cyan-800 text-white font-bold py-2 px-4 rounded-full"
+    phx-click="select-language"
+    phx-value-language="javascript"
   >
     Javascript
   </button>
@@ -19,6 +23,8 @@
     data-role="btn-language-select"
     data-id="java"
     class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 rounded-full"
+    phx-click="select-language"
+    phx-value-language="java"
   >
     Java
   </button>
@@ -27,6 +33,8 @@
     data-role="btn-language-select"
     data-id="python"
     class="bg-gray-700 hover:bg-black text-white font-bold py-2 px-4 rounded-full"
+    phx-click="select-language"
+    phx-value-language="python"
   >
     Python
   </button>
@@ -35,6 +43,8 @@
     data-role="btn-language-select"
     data-id="go"
     class="bg-green-700 hover:bg-green-800 text-white font-bold py-2 px-4 rounded-full"
+    phx-click="select-language"
+    phx-value-language="go"
   >
     Go
   </button>
