Insert repo into database

--- a/lib/smart_git_web/live/page/repo_detail/repo_detail.html.heex
+++ b/lib/smart_git_web/live/page/repo_detail/repo_detail.html.heex
@@ -8,26 +8,7 @@
         </h2>
 
         <div class="flex items-end space-x-1 text-gray-500">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-            />
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
-            />
-          </svg>
-
+          <%= render(SmartGitWeb.SharedView, "watchers-icon.html", %{}) %>
           <p class="text-md text-gray-500" data-role="watcher" data-id={@id}>
             Watchers: <span class="font-semibold"><%= @repo.watchers_count %></span>
           </p>
@@ -43,7 +24,7 @@
           phx-click="add-repo"
           phx-target={@myself}
         >
-          button add/go
+          <%= render(SmartGitWeb.SharedView, "add.html", %{}) %>
         </a>
       </div>
 
