Add logic to change button icons dynamically

--- a/lib/smart_git_web/live/repo_live/repo_live.html.heex
+++ b/lib/smart_git_web/live/repo_live/repo_live.html.heex
@@ -1,7 +1,7 @@
 <div id="my-repos" class="bg-white w-full rounded-lg shadow p-4">
   <ul class="divide-y divide-gray-200">
     <%= for repo <- @repos do %>
-      <%= live_component(RepoDetail, id: "my-repo-#{repo.git_id}", repo: repo) %>
+      <%= live_component(RepoDetail, id: "repo-#{repo.git_id}", repo: repo, saved_repos: nil) %>
     <% end %>
   </ul>
 </div>
