--- a/lib/smart_git_web/live/shared/repo_detail/repo_detail.html.heex
+++ b/lib/smart_git_web/live/shared/repo_detail/repo_detail.html.heex
@@ -24,7 +24,7 @@
           phx-click="add-repo"
           phx-target={@myself}
         >
-          <%= render(SmartGitWeb.SharedView, "add.html", %{}) %>
+          <%= render(SmartGitWeb.SharedView, @icon, %{}) %>
         </a>
       </div>
 
