Add home link to header logo

--- a/lib/smart_git_web/templates/shared/header.html.heex
+++ b/lib/smart_git_web/templates/shared/header.html.heex
@@ -1,8 +1,8 @@
 <nav class="mx-auto flex items-center justify-between py-4 mb-10">
-  <div id="home" class="flex items-center space-x-2">
+  <a href="/" id="home" class="flex items-center space-x-2">
     <%= render(SmartGitWeb.SharedView, "smartgit-icon.html", %{}) %>
     <h1 class="text-2xl">Smart Git</h1>
-  </div>
+  </a>
 
   <div id="menu" class="text-blue-600 hover:text-blue-700">
     <ul class="flex items-center">
