Test liveview components

--- a/lib/smart_git_web/live/shared/repo_detail/repo_detail.html.heex
+++ b/lib/smart_git_web/live/shared/repo_detail/repo_detail.html.heex
@@ -1,4 +1,4 @@
-<li id={@id} class="p-8 rounded-md hover:bg-blue-50 hover:transition-all">
+<li id={@id} data-test="list-item" class="p-8 rounded-md hover:bg-blue-50 hover:transition-all">
   <div class="flex space-x-8">
     <img src={@repo.avatar_url} alt={@repo.name <> " avatar"} class="h-12 w-12 rounded-full" />
     <div class="flex-1 space-y-1">
